# fig-wizard

./: CONTRIBUTING.md  LICENSE  NOTICE  README.md  biome.json  components.json  deploy.sh  install.sh  package.json  pnpm-lock.yaml  vite.config.ts
app/: README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  index.css  index.html  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: commands.rs  lib.rs
app/src-tauri/src/detect/: mod.rs
app/src-tauri/src/pdf/: render.rs
app/src-tauri/src/pipeline/: export.rs  mod.rs  run.rs  types.rs
app/src-tauri/src/verify/: mod.rs
app/src-tauri/tests/: detect_bench.rs  detect_smoke.rs  export_formats.rs  full_pipeline.rs  verify_smoke.rs
app/src/components/app/: PdfDropZone.tsx  ResultsGallery.tsx  VerifySection.tsx
app/src/components/ui/: card.tsx  progress.tsx
app/src/lib/: format.ts  tauri-types.ts
docs/: TECHNICAL_DETAILS.md
phase0-spike/: .gitignore  detect.py  fetch_pdfs.sh  preprocess_ab_test.py  render_pages.py  requirements.txt
phase0-spike/hf_meta/: README.md  batched_inference_example.py  config.json
phase0-spike/output/: summary.json
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/detect/: mod.rs
src-tauri/src/pdf/: render.rs
src-tauri/src/pipeline/: associate.rs  export.rs  run.rs  types.rs
src-tauri/src/verify/: mod.rs
src-tauri/tests/: detect_bench.rs  detect_smoke.rs  export_formats.rs  full_pipeline.rs  verify_smoke.rs
src/components/app/: ExtractSection.tsx  FormatPicker.tsx  ImageWithFallback.tsx  ModelBanner.tsx  ObjectDialog.tsx  PdfDropZone.tsx  ResultsGallery.tsx  VerificationBadge.tsx  VerificationHistory.tsx  VerifySection.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  collapsible.tsx  dialog.tsx  label.tsx  progress.tsx  tooltip.tsx
src/lib/: format.ts  tauri-commands.ts  tauri-types.ts
